cpu/main: add cgroups setup code
Previously, there was just a shell script in the root of the repository
which users could run with root privileges to perform all of the
necessary cgroups setup.

There is no code to automatically perform privilege escalation (i.e.
fork and run sudo/doas/pkexec/whatever). Users must run `waywall cpu`
with root privileges to invoke the cgroups setup code.

--- a/waywall/meson.build
+++ b/waywall/meson.build
@@ -6,6 +6,7 @@ executable('waywall',
   'config/config.c',
   'config/internal.c',
   'config/layout.c',
+  'cpu/cgroup_setup.c',
   'server/backend.c',
   'server/buffer.c',
   'server/cursor.c',
